[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp_actions"
version = "0.1.2"
description = "Reusable Google Cloud helper functions"
authors = [{ name = "Stanislav", email = "bike4cats@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "google-cloud-storage",
    "google-cloud-firestore",
    "google-cloud-secret-manager",
    "google-auth",
    "python-dotenv",

]

[tool.setuptools]
packages = ["gcp_actions"]
